{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "BattleControls",
            "id": "145f856e-f9f0-4cdf-9fba-59832f684522",
            "actions": [
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "01e13dd4-6337-40d3-9d22-b5c6cfef642a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "7eb855d8-c388-4da5-a1a8-e2eaa7c271f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "b82dee8f-2ff1-4c4b-b629-4c3b1e5d859b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPointMove",
                    "type": "Value",
                    "id": "7b1164ee-1cb5-43ed-9694-347e50edb8ba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchHold",
                    "type": "Value",
                    "id": "a3f173fd-dd76-4c29-add9-3be62970c1ff",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchTap",
                    "type": "Button",
                    "id": "dd615423-56fc-4562-baf7-ec752a35c357",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "caa52f18-c0c4-4d5a-a2bd-20cd18ee83bc",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileControls",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56ffc19e-c99e-4d2a-9e35-a0a5e4fd3258",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileControls",
                    "action": "TouchPointMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2f32326-1d61-4f54-a8e5-3c000a87e732",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "MobileControls",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0aba919-04af-415d-b00d-d024a5fc0706",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "799ca419-a2f0-4af6-ba7e-83449c2c14f0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileControls",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92a5acb2-e5e0-4457-8aca-e7a7d5dbf758",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuControls",
            "id": "ff9caebc-8bf8-4ccc-a407-f51a171918d4",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2693d0f0-f4a3-4e6a-ad8a-0bc9f02a4039",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef8ee10a-81ca-4b96-b979-34640dd85f41",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MobileControls",
            "bindingGroup": "MobileControls",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}